force-app/main/default/objects/Servicing_Dashboard_Section__mdt/Servicing_Dashboard_Section__mdt.object-meta.xml
<CustomObject>
    <label>Servicing Dashboard Section</label>
    <pluralLabel>Servicing Dashboard Sections</pluralLabel>
</CustomObject>