force-app/main/default/objects/Servicing_Dashboard_Section__mdt/fields/Collapsed__c.field-meta.xml
<CustomField>
    <fullName>Collapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapsed by Default</label>
    <type>Checkbox</type>
</CustomField>