force-app/main/default/objects/Servicing_Dashboard_Section__mdt/fields/Servicing_Dashboard_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Dashboard_Configuration__c</fullName>
    <label>Servicing Dashboard Configuration</label>
    <referenceTo>Servicing_Dashboard_Configuration__mdt</referenceTo>
    <relationshipLabel>Servicing Dashboard Sections</relationshipLabel>
    <relationshipName>Servicing_Dashboard_Sections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>